--- a/vulcanus-lab/changelog.txt
+++ b/vulcanus-lab/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.2
+Date: 6. 1. 2025
+  Major Features:
+    - Thanks to  Onseshigo for the RU translation!
+---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 5. 30. 2025
   Major Features:
