--- a/vulcanus-lab/changelog.txt
+++ b/vulcanus-lab/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.0.3
+Date: 8. 28. 2025
+  Major Features:
+    - metallurgic_lab_science_pack_drain_rate_percent option added.
+---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 6. 1. 2025
   Major Features:
